--- a/src/Pages/Home/Work/work.css
+++ b/src/Pages/Home/Work/work.css
@@ -1,3 +1,6 @@
-.hello{
-    overflow: hidden;
+.mySwiper .slider img {
+
+    width: 465.49px;
+    height: 334.7px;
+    border-radius: 8.23879px;
 }
